docs/design/classes/core/networks/websocket/machine/v9/machine.part.2.concrete.core.md
# WebSocket Implementation Design: Core Components

## Preamble

This document defines concrete state machine implementation requirements that govern code generation based on machine.part.2.abstract.md. It provides specifications for generating implementations that maintain formal properties while enabling practical extensibility.

### Document Dependencies

This document depends on and is constrained by:

1. `machine.part.2.abstract.md`
   - Core component interfaces
   - Type hierarchies
   - Property mappings
   - Stability tracking
   - Disconnect handling

2. `machine.part.1.md`
   - Formal state machine ($\mathcal{WC}$)
   - Property requirements
   - Action definitions
   - Stability properties
   - Disconnect flows

3. `impl.map.md`
   - Implementation mappings
   - Type system definitions
   - Property preservation rules
   - Stability guarantees

### Document Purpose

- Define concrete state machine requirements
- Specify state transitions and actions
- Establish validation criteria
- Define error handling patterns
- Specify stability tracking
- Define disconnect handling

## 1. State Machine Core

### 1.1 State Management

```mermaid
classDiagram
    class StateManager {
        <<interface>>
        +getCurrentState(): State
        +canTransition(event: Event): boolean
        +validateTransition(from: State, to: State): void
        +validateState(state: State): void
        +getStateMetadata(state: State): StateMetadata
        +isStabilized(): boolean
        +getDisconnectReason(): string?
    }

    class StateValidator {
        <<interface>>
        +validateContext(state: State, context: Context): void
        +validateGuards(state: State, event: Event): void
        +validateActions(state: State, event: Event): void
        +validateProperties(state: State): void
        +validateStability(state: State): void
        +validateDisconnection(state: State): void
    }

    class StateMetadata {
        <<interface>>
        +entryActions: Action[]
        +exitActions: Action[]
        +guards: Guard[]
        +timeouts: Map~string, number~
        +stability: StabilityMetadata
        +disconnectReason: string?
    }

    class StabilityMetadata {
        <<interface>>
        +isStable: boolean
        +lastStableTime: number?
        +reconnectCount: number
        +reconnectHistory: ReconnectEvent[]
    }

    StateManager --> StateValidator
    StateManager --> StateMetadata
    StateMetadata --> StabilityMetadata
```

### 1.2 Action Management

```mermaid
classDiagram
    class ActionExecutor {
        <<interface>>
        +execute(action: Action, context: Context): Context
        +validate(action: Action): void
        +rollback(action: Action, context: Context): Context
        +getActionMetadata(action: Action): ActionMetadata
        +preExec?(action: Action, context: Context): boolean
        +postExec?(action: Action, context: Context): boolean
    }

    class ActionValidator {
        <<interface>>
        +validatePreConditions(action: Action, context: Context): void
        +validatePostConditions(action: Action, result: Context): void
        +validateSideEffects(action: Action): void
        +validateStabilityImpact(action: Action): void
    }

    class ActionMetadata {
        <<interface>>
        +reversible: boolean
        +sideEffects: string[]
        +dependencies: Action[]
        +timeout: number
        +stabilityImpact: StabilityImpact
    }

    ActionExecutor --> ActionValidator
    ActionExecutor --> ActionMetadata
```

## 2. Event Processing

### 2.1 Event Handling

```mermaid
classDiagram
    class EventProcessor {
        <<interface>>
        +process(event: Event): void
        +validate(event: Event): void
        +enrich(event: Event): Event
        +getEventMetadata(event: Event): EventMetadata
        +handleDisconnect(event: DisconnectEvent): void
        +handleStability(event: StabilityEvent): void
    }

    class EventValidator {
        <<interface>>
        +validateType(event: Event): void
        +validatePayload(event: Event): void
        +validateSequence(event: Event): void
        +validateStabilityTransition(event: Event): void
        +validateDisconnectFlow(event: Event): void
    }

    class EventMetadata {
        <<interface>>
        +timestamp: number
        +source: string
        +correlationId: string
        +priority: number
        +stability: StabilityMetadata
        +disconnectReason?: string
    }

    EventProcessor --> EventValidator
    EventProcessor --> EventMetadata
```

### 2.2 Guard Management

```mermaid
classDiagram
    class GuardExecutor {
        <<interface>>
        +evaluate(guard: Guard, context: Context): boolean
        +validate(guard: Guard): void
        +getGuardMetadata(guard: Guard): GuardMetadata
        +checkStabilityGuards(guard: Guard, context: Context): boolean
        +checkDisconnectGuards(guard: Guard, context: Context): boolean
    }

    class GuardValidator {
        <<interface>>
        +validatePredicate(guard: Guard): void
        +validateDependencies(guard: Guard): void
        +validateSideEffects(guard: Guard): void
        +validateStabilityImpact(guard: Guard): void
    }

    GuardExecutor --> GuardValidator
```

## 3. Context Management

### 3.1 Context Operations

```mermaid
classDiagram
    class ContextManager {
        <<interface>>
        +update(context: Context, changes: ContextChanges): Context
        +validate(context: Context): void
        +snapshot(): Context
        +restore(snapshot: Context): void
        +updateStability(metrics: StabilityMetrics): void
        +updateDisconnectState(reason: string): void
    }

    class ContextValidator {
        <<interface>>
        +validateStructure(context: Context): void
        +validateConstraints(context: Context): void
        +validateConsistency(context: Context): void
        +validateStabilityMetrics(context: Context): void
        +validateDisconnectReason(context: Context): void
    }

    class StabilityMetrics {
        <<interface>>
        +isStable: boolean
        +reconnectCount: number
        +lastStableConnection: number
        +stabilityHistory: StabilityEvent[]
    }

    ContextManager --> ContextValidator
    ContextManager --> StabilityMetrics
```

## 4. Property Preservation

### 4.1 State Properties

The implementation must maintain:

1. Single Active State:
   - Only one state active at any time
   - State transitions atomic
   - State history maintained
   - Stability status tracked
   - Disconnect state managed

2. Valid Transitions:
   - All transitions defined in formal spec
   - Guards evaluated before transition
   - Context validated after transition
   - Stability preserving
   - Disconnect flow respected

3. State Invariants:
   - Properties preserved across transitions
   - Context consistency maintained
   - Resource cleanup enforced
   - Stability guarantees upheld
   - Disconnect reasons preserved

### 4.2 Action Properties

Actions must preserve:

1. Context Immutability:
   - New context created for changes
   - Original context unchanged
   - History maintained
   - Stability metrics preserved
   - Disconnect state maintained

2. Action Atomicity:
   - All-or-nothing execution
   - Rollback on failure
   - Side effects tracked
   - Stability impact assessed
   - Disconnect handling atomic

3. Action Ordering:
   - Dependencies respected
   - Sequential execution
   - Completion verified
   - Stability order preserved
   - Disconnect sequence followed

## 5. Error Handling

### 5.1 Recovery Strategies

```mermaid
classDiagram
    class ErrorHandler {
        <<interface>>
        +handle(error: Error): void
        +recover(error: Error): void
        +rollback(error: Error): void
        +log(error: Error): void
        +assessStabilityImpact(error: Error): void
        +handleDisconnectError(error: Error): void
    }

    class RecoveryStrategy {
        <<interface>>
        +canRecover(error: Error): boolean
        +getStrategy(error: Error): Strategy
        +validate(strategy: Strategy): void
        +ensureStability(strategy: Strategy): void
        +handleDisconnectDuringRecovery(strategy: Strategy): void
    }

    ErrorHandler --> RecoveryStrategy
```

## 6. Implementation Requirements

### 6.1 Core Requirements

1. State Machine Properties:
   - Maintain all formal properties
   - Preserve type safety
   - Enable monitoring
   - Support recovery
   - Track stability
   - Handle disconnection

2. Performance Requirements:
   - Transition time ≤ 100ms
   - Memory usage ≤ 50MB
   - CPU usage ≤ 10%
   - Stability check ≤ 50ms
   - Disconnect handling ≤ 200ms

3. Reliability Requirements:
   - Recovery time ≤ 1s
   - State consistency 100%
   - No resource leaks
   - Stability guaranteed after reconnect
   - Clean disconnect guaranteed

### 6.2 Testing Requirements

1. Property Testing:
   - All states reachable
   - All transitions valid
   - All properties preserved
   - Stability verified
   - Disconnect flows validated

2. Performance Testing:
   - Load testing
   - Stress testing
   - Memory testing
   - Stability metrics
   - Disconnect timing

3. Recovery Testing:
   - Error recovery
   - State recovery
   - Resource cleanup
   - Stability restoration
   - Disconnect handling

## 7. Security Requirements

### 7.1 Implementation Security

1. State Protection:
   - State access controlled
   - Context immutable
   - History secured
   - Stability metrics protected
   - Disconnect reasons secured

2. Action Security:
   - Action validation
   - Side effect tracking
   - Resource limits
   - Stability preservation
   - Disconnect safety

3. Error Security:
   - Error information protected
   - Recovery authenticated
   - Logging secured
   - Stability status protected
   - Disconnect reasons validated

### 7.2 Resource Protection

1. Memory Safety:
   - Bounds checking
   - Resource cleanup
   - Leak prevention
   - Stability metrics cleanup
   - Disconnect resource release

2. Execution Safety:
   - Timeout enforcement
   - CPU limiting
   - Stack protection
   - Stability check timeouts
   - Disconnect timeouts

This specification provides the concrete requirements for implementing the core state machine components while maintaining all formal properties, security requirements, stability guarantees, and proper disconnect handling.